--- a/order-service.properties
+++ b/order-service.properties
@@ -3,4 +3,4 @@ spring.datasource.url = jdbc:mysql://localhost:3306/order-service
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-my.test = test1
+my.test = test updated
